ADD_SUBDIRECTORY(extend_cfg)


PYTHON_ADD_MODULE(clang_cfg pybind.cpp)

TARGET_LINK_LIBRARIES(clang_cfg clang_tool CFG)
TARGET_LINK_LIBRARIES(clang_cfg ${CLANG_LIBS} ${LLVM_LIBS})

EXECUTE_PROCESS(COMMAND ${LLVM_BIN}/llvm-config --system-libs OUTPUT_VARIABLE SYSTEM_LIBS)

STRING(STRIP ${SYSTEM_LIBS} SYSTEM_LIBS)
STRING(REPLACE "-l" "" SYSTEM_LIBS ${SYSTEM_LIBS})
STRING(REGEX MATCHALL "[^\ ]+" SYSTEM_LIBS ${SYSTEM_LIBS})
TARGET_LINK_LIBRARIES(clang_cfg ${SYSTEM_LIBS})





